# tradex

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/features/: default.json
config/risk/: aggressive.json  conservative.json  moderate.json
config/strategies/: default.json  full.json  mean-reversion.json  momentum.json  multi-timeframe.json  news-driven.json  trend-following.json  volume-breakout.json
docs/: automated-trading-drill.md  automatic-trading.md  commands.md  crypto-training.md  future_plans.md  secrets-and-platforms.md  stock-training.md
docs/plans/: 01-ibkr-execution-plan.md  02-kraken-execution-plan.md  03-platform-registry-and-secrets-plan.md  04-sp500-training-plan.md  05-kraken-crypto-training-plan.md  06-automated-trading-drill-plan.md  README.md
scripts/: batch_predict.py  debug_train.py  debug_train2.py  test_endpoints.py
tests/: conftest.py  test_auto_api.py  test_auto_cli.py  test_auto_engine.py  test_crypto_data.py  test_crypto_pipeline.py  test_crypto_reports.py  test_crypto_universe.py  test_data.py  test_decision_engine.py  test_drill_dashboard.py  test_drill_engine.py  test_drill_report.py  test_drill_signals.py  test_drill_store.py  test_execution.py  test_indicators.py  test_models.py  test_platform_registry.py  test_secrets.py  test_signals.py  test_simulated_broker.py  test_stock_pipeline.py  test_stock_reports.py  test_stock_universe.py
tradex/: __main__.py
tradex/api/: app.py  schemas.py
(+63 files in other folders)
