[project]
name = "tradex"
version = "0.1.0"
description = "Multi-asset trade prediction using hybrid ML + technical analysis"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1",
    "yfinance>=0.2",
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "pandas-ta>=0.3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "joblib>=1.3",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    # Cloud storage
    "boto3>=1.34",
    # Scheduler
    "apscheduler>=3.10,<4.0",
    "ib-async>=2.1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
tradex = "tradex.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
